--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,14 +1,12 @@
 .footer {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  background-color: map-get($map: $paleta, $key: "cuatro");
+  @include flex(column, flex-start);
   margin-left: 10px;
   div {
     margin-bottom: 10px;
   }
   h3 {
-    color: salmon;
+    color: map-get($map: $paleta, $key: "seis");
     font-size: 0.8rem;
   }
 }
@@ -23,8 +21,7 @@
 
 @media (min-width: 768px) {
   .footer {
-    display: flex;
-    flex-direction: row;
+    @include flex(row, center);
     justify-content: space-evenly;
     h3 {
       font-size: 1.2rem;
