--- a/scss/_navBar.scss
+++ b/scss/_navBar.scss
@@ -1,19 +1,17 @@
 .bg-nav {
-  background-color: white;
+  background-color: map-get($map: $paleta, $key: "cuatro");
   padding: 10px;
   ul li {
     margin-right: 20px;
-    background-color: white;
+    background-color: map-get($map: $paleta, $key: "cuatro");
   }
   a {
-    font-size: 1rem;
-    color: rgb(243, 164, 162);
-    font-weight: bolder;
+    @include texto(1rem, map-get($map: $paleta, $key: "siete"), bolder);
     text-decoration: none;
     padding: 10px;
     &:hover {
-        color: salmon;
-      }
+      color: map-get($map: $paleta, $key: "seis");
+    }
   }
 }
 
@@ -26,28 +24,16 @@ nav img {
 }
 
 .navbar-toggler-icon {
-  background-color: antiquewhite;
+  background-color: map-get($map: $paleta, $key: "ocho");
 }
-  
+
 #nav1 {
   height: 15vh;
 }
 
 @media (min-width: 768px) {
-  .contenedor {
-    grid-template-columns: 30vw 70vw;
-    grid-template-rows: repeat(6, auto);
-    grid-template-areas:
-      "header header"
-      "nav nav"
-      "filtros filtros"
-      "productos productos"
-      "aside aside"
-      "footer footer";
-  }
- 
   .bg-nav {
-    background-color: white;
+    background-color: map-get($map: $paleta, $key: "cuatro");
     ul li a {
       font-size: 1rem;
     }
@@ -55,16 +41,6 @@ nav img {
 }
 
 @media (min-width: 1024px) {
-  .contenedor {
-    grid-template-columns: 15vw 70vw 15vw;
-    grid-template-rows: repeat(4, auto);
-    grid-template-areas:
-      "header header header"
-      "nav nav nav"
-      "filtros productos aside"
-      "footer footer footer";
-  }
-
   nav img {
     width: 70%;
   }
