--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -1,5 +1,5 @@
 //Page "Index"
-.carousel-inner {
+.carousel-index {
   size: 40%;
   padding: 20px;
   img {
@@ -10,9 +10,16 @@
 
 //Page "Diseños Disponibles"
 
-.estampados__titulo {
-  font-size: 2rem;
+.galeria_disenios {
+  @include flex(column, center);
+  align-items: center;
+}
+
+.encabezadoCarousel {
+  font-size: 2.5rem;
   font-weight: bolder;
+  margin-bottom: 0;
+  margin-top: 60px;
 }
 
 h1 a {
@@ -24,6 +31,16 @@ h1 a {
   }
 }
 
+.carousel {
+  width: 100%;
+}
+
+.carousel-inner img {
+  width: 600px;
+  height: 200px;
+  padding: 0px;
+}
+
 //Page "Productos"
 .nav2 {
   background-color: map-get($map: $paleta, $key: "tres");
@@ -32,7 +49,10 @@ h1 a {
   font-size: 1.5rem;
   li {
     list-style: none;
-    font-size: 1.5rem;
+    font-size: 1rem;
+    @media (min-width: 768px) {
+      font-size: 1.5rem;
+    }
   }
   ul {
     padding-left: 0;
@@ -40,11 +60,39 @@ h1 a {
 }
 
 a {
-  font-size: 2rem;
+  font-size: 1rem;
   text-decoration: none;
   font-weight: bolder;
   &:hover {
     color: map-get($map: $paleta, $key: "seis");
+  }
+  @media (min-width: 768px) {
+    font-size: 2rem;
+  }
+}
+
+#aside {
+  @include flex(column, center);
+  justify-content: space-evenly;
+  @media (min-width: 768px) {
+    @include flex(row, center);
+  }
+  @media (min-width: 1024px) {
+    @include flex(column, center);
+  }
+  figcaption {
+    font-size: 1rem;
+    font-weight: bolder;
+  }
+}
+
+img {
+  width: 20%;
+  @media (min-width: 768px) {
+    width: 30%;
+  }
+  @media (min-width: 1024px) {
+    width: 70%;
   }
 }
 
@@ -54,44 +102,40 @@ a {
 
 .card {
   align-items: center;
-  width: 80%;
+  width: 90%;
+  background-color: map-get($map: $paleta, $key: "tres");
+  @media (min-width: 1024px) {
+    .card {
+      width: 100%;
+    }
+  }
+}
+.container-fluid {
+  h3 {
+    color: map-get($map: $paleta, $key: "seis");
+    font-style: italic;
+  }
 }
 
 .card-body {
   background-color: map-get($map: $paleta, $key: "tres");
+  @include flex(column, center);
+  justify-content: space-around;
+  width: 80%;
   h2 {
     font-size: 1.5rem;
   }
   p {
-    font-size: 1.2rem;
-  }
-}
-
-.card-img-top {
-  width: 100%;
-  background-color: map-get($map: $paleta, $key: "tres");
-}
-
-.btn {
-  background-color: map-get($map: $paleta, $key: "seis");
-  color: map-get($map: $paleta, $key: "cuatro");
-  font-weight: bolder;
-}
-
-@media (min-width: 768px) {
-  .card-body {
-    p {
+    font-size: 1rem;
+    font-weight: bold;
+    @media (min-width: 768px) {
       font-size: 1.5rem;
     }
   }
-}
-
-@media (min-width: 1024px) {
-  .card {
-    width: 100%;
+  h4 {
+    color: map-get($map: $paleta, $key: "seis");
   }
-
-  .card-body {
+  @media (min-width: 1024px) {
     h2 {
       font-size: 1.2rem;
     }
@@ -101,6 +145,19 @@ a {
   }
 }
 
+.card-img-top {
+  width: 70%;
+  background-color: map-get($map: $paleta, $key: "tres");
+  @media (min-width: 1024px) {
+    width: 100%;
+  }
+}
+
+.btn {
+  background-color: map-get($map: $paleta, $key: "seis");
+  color: map-get($map: $paleta, $key: "cuatro");
+  font-weight: bolder;
+}
 //Page "Sobre Mí"
 
 .sobreMi__article {
@@ -113,7 +170,6 @@ a {
   border: dotted 6px map-get($map: $paleta, $key: "tres");
   padding: 20px 20px;
   box-sizing: border-box;
-
   @media (min-width: 768px) {
     font-size: 1.5rem;
   }
@@ -146,7 +202,6 @@ a {
 article {
   display: flex;
   justify-content: center;
-  background-color: map-get($map: $paleta, $key: "tres");
   h2 {
     font-size: 2rem;
   }
@@ -154,4 +209,48 @@ article {
 
 .img-thumbnail {
   width: 100%;
+}
+
+//Page "Error 404"
+
+.error404 {
+  h1 {
+    font-size: 1.5rem;
+    font-weight: bolder;
+    padding: 20px;
+    @media (min-width: 768px) {
+      font-size: 2.5rem;
+    }
+  }
+  padding: 20px 20px;
+  @include flex(column, center);
+  align-items: center;
+  img {
+    width: 100%;
+    @media (min-width: 768px) {
+      width: 80%;
+    }
+    @media (min-width: 1024px) {
+      width: 60%;
+    }
+  }
+  p {
+    font-size: 1.5rem;
+    font-weight: bolder;
+    color: map-get($map: $paleta, $key: "uno");
+    @media (min-width: 728px) {
+      font-size: 2.5rem;
+    }
+  }
+  a {
+    font-size: 1.5rem;
+    text-decoration: none;
+    font-weight: bolder;
+    &:hover {
+      color: map-get($map: $paleta, $key: "seis");
+    }
+    @media (min-width: 728px) {
+      font-size: 2.5rem;
+    }
+  }
 }
